Fix layout issues with no perms

--- a/src/assets/stylesheets/entry.scss
+++ b/src/assets/stylesheets/entry.scss
@@ -116,10 +116,6 @@
     margin-bottom: 4px;
     margin-right: 8px;
     margin-left: 8px;
-
-    span {
-      margin-left: 24px;
-    }
   }
 
   :local(.lobby) {
